# df2mysql

./: README.md  pyproject.toml  setup.py
df2mysql/: database.py
